--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-sweetalert2": "^0.6.0",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "sweetalert2": "^11.7.20",
     "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4"
